examples/test/testpolicy13257.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13257
  namespace: namespace7
spec:
  podSelector:
    matchLabels:
      key14: value42
      key25: value16
      key1: value44
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value8
      podSelector:
        matchLabels:
          key45: value12
          key11: value14
